[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slashman-media-kit"
version = "0.1.0"
description = "Shared media helpers (YouTube upload, ...) for slashman413 video/Shorts pipelines"
requires-python = ">=3.10"
dependencies = [
  "google-api-python-client>=2.95.0",
  "google-auth-oauthlib>=1.0.0",
  "google-auth-httplib2>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["media_kit*"]
